Edited wiki page through web user interface.

--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -7,4 +7,5 @@ Documentation (such as it is) and other stuff.
 
 = Details =
 
+[InstallationInstructions]
 http://code.google.com/p/oclcsrw/wiki/InstallationInstructions
