Edited wiki page through web user interface.

--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -35,7 +35,7 @@ If you are running DSpace, then you need to change db.DSpace.home to point at yo
 If you are not running DSpace, this section can be left in the configuration file with no ill effects. 
 
 Pears/ Newton
-There are three pieces of information necessary to configure a Pears or Newton database. First, you specify that the database is a Pears/Newton database with the db.<dbname>.class parameter, setting it to ORG.oclc.os.SRW.SRWPearsDatabase. Replace <dbname> with the name of your database. (Sorry, no embedded blanks in the dbname.) Next, you specify the location of the files needed by the database via the db.<dbname>.home parameter. You point this at the path to the directory that contains, at least, the SRW configuration properties file for the database. (Don't forget the trailing slash on the path.) Finally, you specify the name of the properties file via the db.<dbname>.configuration parameter. Typically, this file is named SRWDatabase.props. (See PearsSRWConfiguration.html for information about that file.) 
+There are three pieces of information necessary to configure a Pears or Newton database. First, you specify that the database is a Pears/Newton database with the `db.<dbname>.class` parameter, setting it to ORG.oclc.os.SRW.SRWPearsDatabase. Replace `<dbname>` with the name of your database. (Sorry, no embedded blanks in the dbname.) Next, you specify the location of the files needed by the database via the `db.<dbname>.home` parameter. You point this at the path to the directory that contains, at least, the SRW configuration properties file for the database. (Don't forget the trailing slash on the path.) Finally, you specify the name of the properties file via the `db.<dbname>.configuration` parameter. Typically, this file is named SRWDatabase.props. (See PearsSRWConfiguration.html for information about that file.) 
 
 Build
 Go to the `<SRW>` directory and run ant. (See The Apache Ant Project for more information about ant.) By default, it compiles the source code and builds the srw.jar file in the `<SRW>/build/` directory. If you have previously deployed the SRW.war file, then this is probably all you need to build and you should copy `<SRW>/build/srw.jar` to your existing `<Tomcat>/webapps/SRW/WEB-INF/lib` directory. 
