--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -34,7 +34,7 @@ If you are running DSpace, then you need to change db.DSpace.home to point at yo
 
 If you are not running DSpace, this section can be left in the configuration file with no ill effects. 
 
-Pears/ Newton
+[http://www.oclc.org/research/software/pears/ Pears]/ [http://opensitesearch.sourceforge.net/docs/helpzone/dbb/dbb_01-00-00i.html Newton]<br/>
 There are three pieces of information necessary to configure a Pears or Newton database. First, you specify that the database is a Pears/Newton database with the `db.<dbname>.class` parameter, setting it to ORG.oclc.os.SRW.SRWPearsDatabase. Replace `<dbname>` with the name of your database. (Sorry, no embedded blanks in the dbname.) Next, you specify the location of the files needed by the database via the `db.<dbname>.home` parameter. You point this at the path to the directory that contains, at least, the SRW configuration properties file for the database. (Don't forget the trailing slash on the path.) Finally, you specify the name of the properties file via the `db.<dbname>.configuration` parameter. Typically, this file is named SRWDatabase.props. (See PearsSRWConfiguration.html for information about that file.) 
 
 Build
