--- a/wiki/WikiHomePage.wiki
+++ b/wiki/WikiHomePage.wiki
@@ -13,3 +13,4 @@ Complete information on the SRW/SRU standard can be found at the maintenance age
 = Details =
 
 [InstallationInstructions]
+[ConfigurationFiles]
