Edited wiki page through web user interface.

--- a/wiki/ConfigurationFiles.wiki
+++ b/wiki/ConfigurationFiles.wiki
@@ -9,7 +9,7 @@ Every web service, of which SRW is one, has a web.xml configuration file. This f
 There is a single optional parameter for the SRW server: PropertiesFile.  This parameter is commented out in the distribution.  Normally, the server expects to see a file named SRWServer.props somewhere in the Tomcat classpath.  Originally, I tend to put that file in one of the Tomcat shared directories (e.g. `<tomcat>/shared/classes` or `<tomcat>/lib`).  If you have a need to either rename or move that file, then you’ll want to uncomment the parameter and specify the full path to the properties file. 
 
 ==SRWServer.props==
-The SRWServer.props file contains configuration information common to all databases (such as `resultSetIdleTime` and any SRU input parameter extensions supported.  It also contains the list of databases to be supported.  See [SRWServer.props] for more details.
+The SRWServer.props file contains configuration information common to all databases (such as `resultSetIdleTime` and any SRU input parameter extensions supported.  It also contains the list of databases to be supported.  See SRWServerProps for more details.
 
 ==[http://www.dspace.org/ DSpace] specific configuration==
 If you are running DSpace, then you need to change db.DSpace.home to point at your DSpace directory. This will be the directory that contains the DSpace conf directory. (Don't forget the trailing slash on the path.) The SRWServer.props file is set to point at an SRW configuration file for the DSpace database. It expects to find that configuration file in the conf subdirectory of the DSpace directory. You will need to copy the file DSpace.SRWDatabase.props to your /conf directory. (See DSpaceSRWConfiguration.html for information about that file.)
