Edited wiki page through web user interface.

--- a/wiki/LinkedData.wiki
+++ b/wiki/LinkedData.wiki
@@ -31,8 +31,8 @@ The `<condition>` element ensures that what we have is a GET request.  (My serve
 
 The `<from>` element is the test that this is a URI.
 
-The `<set>` action sets a parm named "service" to "APP", signaling to the server that it has gotten an AtomPub request and should expect to strip the SRU response wrapper off the outbound response and return just the bare record in the response.  (It used to be that I would accept one of these URIs and return and SRU response with the record embedded.  I decided that that was bad behavior and now return only the record the client requested.  If they wanted and SRU response, they'd have asked for one.)
+The `<set>` action sets a parm named "service" to "APP", signaling to the server that it has gotten an `AtomPub` request and should expect to strip the SRU response wrapper off the outbound response and return just the bare record in the response.  (It used to be that I would accept one of these URIs and return and SRU response with the record embedded.  I decided that that was bad behavior and now return only the record the client requested.  If they wanted and SRU response, they'd have asked for one.)
 
-You can also `<set>` a "`ContentType`" parameter.  Normally, the server sets the ContentType in the reponse to "text/xml", but you can override that with something like "application/rdf+xml" by setting that ContentType parm.
+You can also `<set>` a "`ContentType`" parameter.  Normally, the server sets the `ContentType` in the reponse to "text/xml", but you can override that with something like "application/rdf+xml" by setting that `ContentType` parm.
 
 The `<to>` element makes the SRU request out of the URI.  In this case, all it has to do it create the query parm of the SRU request and everything else will have appropriate defaults to return the record.  See the later example for how to ask for non-default forms of the record.
